# placement-controller

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  DESIGN.md  Dockerfile  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  README.md  RELIABILITY.md  SECURITY.md  pyproject.toml
.github/workflows/: build.yaml  build_web.yaml  client.yaml  service.yaml  test.yaml  test_and_build.yaml
.opencode/skills/: library-upgrade.md
api/: openapi.yaml
app/: context.py  context_builder.py  settings.py  test_context.py  test_pydantic_yaml.py
app/api/: app.py  model.py
app/clients/k8s/: client.py  client_impl.py  event.py  fake_client.py  fake_k8s_client.py  k8s_client.py  k8s_client_impl.py  k8s_event.py  settings.py  test_fake_client.py
app/core/: application.py  applications.py
charts/placement-controller/: Chart.yaml  README.md  values.yaml
charts/placement-controller/templates/: clusterrole.yaml  deployment.yaml  ingress.yaml  service-monitor.yaml  service.yaml
client/: README.md  pyproject.toml  setup.cfg
client/placement_controller_client/: api_client.py  configuration.py  rest.py
client/placement_controller_client/api/: __init__.py  default_api.py
client/placement_controller_client/models/: __init__.py  http_validation_error.py  validation_error.py  validation_error_loc_inner.py
docs/design-docs/: core-beliefs.md  design-template.md  index.md  story-template.md  task-template.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: task-add-tests.md  task-dynamic-resource-metrics.md  task-extend-metricsettings.md
docs/exec-plans/completed/: dynamic-metrics-from-prometheus.md  story-0001-dynamic-metrics-from-prometheus.md  story-0001-task-01-extend-metricsettings.md  story-0001-task-02-dynamic-resource-metrics.md  story-0001-task-03-update-context.md  story-0001-task-04-add-tests.md  story-0001-task-05-documentation.md  task-01-extend-metricsettings.md  task-02-dynamic-resource-metrics.md  task-03-update-context.md  task-04-add-tests.md  task-05-documentation.md  task-documentation.md  task-update-context.md
env/: emdc1.yaml  kind-kind-cluster1.yaml  kind-kind-cluster2.yaml
etc/: config.yaml  kind-kind-cluster1.yaml  kind-kind-cluster2.yaml
helm-charts/: index.yaml  placement-controller-0.0.1-dev.5.kube-event-liste.99aa4846.tgz  placement-controller-0.0.1-dev.6.kube-event-liste.ca2f674d.tgz  placement-controller-0.0.1-dev.7.kube-event-liste.62ee61a5.tgz  placement-controller-0.0.1-dev.7.kube-event-liste.f3173fa9.tgz  placement-controller-0.0.1-dev.8.kube-event-liste.35ae9c4c.tgz  placement-controller-0.0.1-dev.8.main.c71e3559.tgz  placement-controller-0.0.1.tgz  placement-controller-0.1.0-dev.0.build-fix.7bacc2ea.tgz  placement-controller-0.1.0-dev.0.main.ea843775.tgz  placement-controller-0.1.0-dev.1.configuring-defa.1bd46173.tgz  placement-controller-0.1.0-dev.10.integration-fixe.e5f560ee.tgz  placement-controller-0.1.0-dev.11.integration-fixe.b7dbd2d3.tgz  placement-controller-0.1.0-dev.11.main.a4cc2e46.tgz  placement-controller-0.1.0-dev.12.EDGE-256-impleme.e77d56ad.tgz  placement-controller-0.1.0-dev.13.EDGE-256-impleme.49c3fddb.tgz  placement-controller-0.1.0-dev.14.EDGE-256-impleme.1319841c.tgz  placement-controller-0.1.0-dev.14.EDGE-256-impleme.9f1e3c00.tgz  placement-controller-0.1.0-dev.15.EDGE-256-impleme.71c8b6fb.tgz  placement-controller-0.1.0-dev.15.main.72c6912b.tgz  placement-controller-0.1.0-dev.2.configuring-defa.73c5ac4c.tgz  placement-controller-0.1.0-dev.2.main.4048c6b6.tgz  placement-controller-0.1.0-dev.3.api-set-owner.574ae8e0.tgz  placement-controller-0.1.0-dev.4.api-set-owner.b0892b5f.tgz  placement-controller-0.1.0-dev.48.EDGE-304-migrate.59d50266.tgz  placement-controller-0.1.0-dev.49.EDGE-304-migrate.662032f9.tgz  placement-controller-0.1.0-dev.50.EDGE-304-migrate.bafff983.tgz  placement-controller-0.1.0-dev.51.EDGE-304-migrate.96f1497c.tgz  placement-controller-0.1.0-dev.53.EDGE-304-open-ap.60c3a743.tgz  placement-controller-0.1.0-dev.53.main.60c3a743.tgz  placement-controller-0.1.0-dev.56.EDGE-304-open-ap.b066ecb2.tgz  placement-controller-0.1.0-dev.57.EDGE-304-open-ap.8fa54e2e.tgz  placement-controller-0.1.0-dev.58.EDGE-304-open-ap.e2659f87.tgz  placement-controller-0.1.0-dev.59.main.29acb6f9.tgz  placement-controller-0.1.0-dev.6.api-set-owner.9cf3beaf.tgz  placement-controller-0.1.0-dev.60.EDGE-304-open-ap.2449d61d.tgz  placement-controller-0.1.0-dev.62.EDGE-304-open-ap.b375d70c.tgz  placement-controller-0.1.0-dev.64.EDGE-304-open-ap.a2d7c246.tgz  placement-controller-0.1.0-dev.65.EDGE-304-open-ap.7844b8e8.tgz  placement-controller-0.1.0-dev.65.main.d1ce2a5e.tgz  (+165 more)
service/: Dockerfile  pyproject.toml
service/env/: emdc1.yaml
service/etc/: config.yaml
service/placement/: context_builder.py  settings.py  test_context.py
service/placement/api/: app.py  model.py
service/placement/core/: application.py
service/placement/util/: mock_clock.py
service/src/placement/: context.py  context_builder.py  main.py  test_context_builder.py  test_pydantic_yaml.py
src/placement_controller/: async_fixture.py  context.py  context_builder.py  main.py  pydantic_yaml.py  resource_fixture.py  settings.py  test_context.py  test_context_builder.py  test_pydantic_yaml.py
src/placement_controller/api/: app.py  model.py
src/placement_controller/core/: application.py  applications.py  context.py  fsm.py  next_state_result.py  scheduling_queue.py  scheduling_state.py  test_applications.py  test_fsm.py  test_fsm_base.py  test_fsm_failures.py  test_fsm_scale.py  test_scheduling_queue.py  types.py
src/placement_controller/jobs/: bid_action.py  decision_action.py  executor.py  fake_application_controller.py  fake_placement_server.py  fake_server.py  get_spec_action.py  placement_action.py  test_bid_action.py  test_bid_response_comparator.py  test_decision_action.py  (+4 more)
tools/: application-client.yaml  config.yaml  extract_openapi.py  orchestrationlib-client.yaml  version.sh
tools/client_generator/: config.json  generate.py
tools/templates/: pyproject_ruff.toml.jinja  pyproject_uv.toml.jinja
(+60 files in other folders)
