[project]
name = "placement-controller"
version = "0.1.0"
requires-python = ">=3.13.7"
dependencies = [
  "kubernetes == 32.0.0",
  "jsonpath == 0.82.2",
  "jsonpath-ng == 1.7.0",
  "httpx == 0.28.1",
  "pydantic-settings == 2.11.0",
  "aiohttp == 3.13.2",
  "loguru == 0.7.3",
  "kubernetes_asyncio == 33.3.0",
  "sortedcontainers == 2.4.0",
  "prometheus-async == 25.1.0",
  "fastapi == 0.120.4",
  "uvicorn == 0.38.0",
  "placement-api",
  "placement-client",
  "application-api",
  "application-client",
  "orchestrationlib-api",
  "orchestrationlib-client",
]

[tool.uv.sources]
placement-api = { workspace = true }
placement-client = { workspace = true }
application-api = { workspace = true }
application-client = { workspace = true }
orchestrationlib-api = { workspace = true }
orchestrationlib-client = { workspace = true }

[tool.uv.workspace]
members = [
  "packages/placement-api",
  "packages/placement-client",
  "packages/application-api",
  "packages/application-client",
  "packages/orchestrationlib-api",
  "packages/orchestrationlib-client",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"


[tool.uv]
dev-dependencies = [
  "black == 25.9.0",
  "flake8 == 7.3.0",
  "isort == 7.0.0",
  "isort[colors] == 7.0.0",
  "mypy == 1.18.2",
  "mypy-extensions == 1.1.0",
  "pyyaml == 6.0.3",
  "types-pyyaml == 6.0.12.20250915",
  "pre-commit == 4.3.0",
  "types-python-dateutil == 2.9.0.20251008",
  "pytest == 8.4.2",
  "pytest-mock == 3.15.1",
  "openapi-python-client == 0.27.0"
]

[tool.isort]
# https://github.com/timothycrosley/isort/
line_length = 120

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.black]
# https://github.com/psf/black
line-length = 120
color = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
# mypy_path = "/"
pretty = true
show_traceback = true
color_output = true
exclude = [
  '.git',
  '__pycache__',
  '.venv',
  'build',
  'dist'
]

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]
