[project]
name = "placement-controller"
version = "0.1.0"
requires-python = ">=3.14.2"
dependencies = [
  "kubernetes == 35.0.0",
  "jsonpath == 0.82.2",
  "jsonpath-ng == 1.8.0",
  "httpx == 0.28.1",
  "pydantic-settings == 2.14.0",
  "aiohttp == 3.13.5",
  "loguru == 0.7.3",
  "kubernetes_asyncio == 35.0.1",
  "sortedcontainers == 2.4.0",
  "prometheus-async == 26.1.0",
  "fastapi == 0.136.1",
  "uvicorn == 0.46.0",
  "filelock == 3.29.0", # pinned due to vulnerability
  "placement-api",
  "placement-client",
  "application-api",
  "application-client",
  "orchestrationlib-api",
  "orchestrationlib-client",
]

[tool.uv.sources]
placement-api = { workspace = true }
placement-client = { workspace = true }
application-api = { workspace = true }
application-client = { workspace = true }
orchestrationlib-api = { workspace = true }
orchestrationlib-client = { workspace = true }

# pinned transitive "urllib3 == 2.6.2" due to vulnerability
[[tool.uv.dependency-metadata]]
name = "kubernetes"
version = "35.0.0"
requires-dist = [
  "certifi>=2025.11.12",
  "six>=1.9.0",
  "python-dateutil>=2.5.3",
  "setuptools>=80.9.0",
  "pyyaml>=5.4.1",
  "google-auth>=2.51.0",
  "websocket-client>=0.32.0,!=0.40.0,!=0.41.*,!=0.42.*",
  "requests>=2.32.5",
  "requests-oauthlib>=2.0.0",
  "urllib3>2.6.0",
  "durationpy>=0.7"
]

[tool.uv.workspace]
members = [
  "packages/placement-api",
  "packages/placement-client",
  "packages/application-api",
  "packages/application-client",
  "packages/orchestrationlib-api",
  "packages/orchestrationlib-client",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"


[tool.uv]
dev-dependencies = [
  "black == 26.3.1",
  "flake8 == 7.3.0",
  "isort == 8.0.1",
  "isort[colors] == 8.0.1",
  "mypy == 2.0.0",
  "mypy-extensions == 1.1.0",
  "pyyaml == 6.0.3",
  "types-pyyaml == 6.0.12.20260408",
  "pre-commit == 4.6.0",
  "types-python-dateutil == 2.9.0.20260408",
  "pytest == 9.0.3",
  "pytest-mock == 3.15.1",
  "openapi-python-client == 0.28.3"
]

[tool.isort]
# https://github.com/timothycrosley/isort/
line_length = 120

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.black]
# https://github.com/psf/black
line-length = 120
color = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
# mypy_path = "/"
pretty = true
show_traceback = true
color_output = true
exclude = [
  '.git',
  '__pycache__',
  '.venv',
  'build',
  'dist'
]

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]
